Revision history for Plack-Middleware-Statsd

{{$NEXT}}

v0.3.9    2018-11-30 15:59:17+00:00 Europe/London
  [Documentation]
  - Removed the section about support for older Perl versions.

  - Fixed typo in Changes for v0.3.5.

  - Added note about Catalyst::Plugin::Statsd.

v0.3.8    2018-11-30 01:30:27+00:00 Europe/London
  [Documentation]
  - Added INSTALL file to the distribution.

  - Fixed typo in POD.

  [Toolchain]
  - Tweaks to dist.ini for simplifying build.

  - Updated MANIFEST.SKIP.

v0.3.7    2018-10-19 16:06:50+01:00 Europe/London
  [Toolchain]
  - Added MANIFEST.SKIP to distribution.

v0.3.6    2018-10-16 22:38:04+01:00 Europe/London
  [Documentation]
  - Corrected minor typo.

v0.3.5    2018-05-31 21:19:21+01:00 Europe/London
  [Documentation]
  - Documented a known issue about non-standard status codes, #2.

  [Toolchain]
  - Removed redundant prerequisites from cpanfile and META files.

  - Added keywords to distribution metadata.

  [Other Changes]
  - Added HTTP::Status 6.16 as a recommended prerequisite, #2.

v0.3.4    2018-03-01 15:39:03+00:00 Europe/London
  [Bug Fixes]
  - Fix bug with counting content types that contain dots, e.g.
    "image/vnd.microsoft.icon".

v0.3.3    2018-02-13 15:24:11+00:00 Europe/London
  [Documentation]
  - Fixed module import in SYNOPSIS.

v0.3.2    2018-02-10 23:36:10+00:00 Europe/London
  [Documentation]
  - Added missing section about the sample_rate attribute.

  - Fixed typo in SYNOPSIS.

v0.3.1    2018-02-10 23:22:47+00:00 Europe/London
  [Enhancements]
  - Re-added the sampling rate attribute.

  [Incompatabilities]
  - Logs a float for the response time, instead of an integer. This is
    an enhancement, but may cause issues with some statsd daemons.

  [Documentation]
  - Added note about modifying sample rates.

  - Added note about support for older Perl versions.

  - Updated the SYNOPSIS to show the recommended Statsd client.

  - Updated the section for the client attribute on compatible Statsd