@@ -1,6 +1,8 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Enhancements]
+  - Added psgi.worker.pid metric for tracking the number of active workers, #4.
 
 v0.3.9    2018-11-30 15:59:17+00:00 Europe/London
   [Documentation]
